--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,5 @@ Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 
 Djouab Mohamed abdennacer <mouh.bw@gmail.com>
-Mussa Milanzi <viewholder74@gmail.com>
+Sibusisiwe Sithole 
  
